fix(note): sync

--- a/java/jvm.org
+++ b/java/jvm.org
@@ -2,12 +2,12 @@
 
 ** JVM 内存划分
 
-| 内存类型   | 备注     |
-|------------+----------|
-| 方法区     | 线程共享 |
-| 堆         | 线程共享 |
-| 程序计数器 | 线程私有 |
-| 栈         | 线程私有 |
+| 内存类型 | 备注     |
+|----------+----------|
+| 方法区   | 线程共享 |
+| 堆       | 线程共享 |
+| 程序计数 | 线程私有 |
+| 栈       | 线程私有 |
 
 *** 方法区
 
@@ -20,7 +20,7 @@
 
 *** 栈
 
-线程私有， 其中比较重要的一个部分就是局部变量表。
+线程私有， 其中比较值得关注的就是局部变量表。
 
 | 数据类型      | 样例                                         | 备注                                                |
 |---------------+----------------------------------------------+-----------------------------------------------------|
@@ -28,7 +28,7 @@
 | refrence      | Object o = new Object();                     | o存储在栈上，内容为一个地址，指向堆                 |
 | retrunAddress | doSomeThing();                               | 此方法地址也存储在栈上，执行时寻址并执行            |
 
-插槽的大小(32位或64位)取决与虚拟机的实现。
+槽的大小(32位或64位)取决与虚拟机的实现。
 
 **** 虚拟机栈
 
@@ -40,4 +40,5 @@
 
 *** 直接内存
 
-这部分内存不属于JVM，而是native直接使用
+这部分内存不属于JVM，而是native(C)直接使用，
+
