--- a/java/jvm.org
+++ b/java/jvm.org
@@ -1,3 +1,7 @@
+#+TITLE: JVM
+#+AUTHOR: qinrongjun
+#+DATE: <2024-02-21 Wed>
+
 * JVM
 
 ** JVM 内存划分
@@ -22,11 +26,11 @@
 
 线程私有， 其中比较值得关注的就是局部变量表。
 
-| 数据类型      | 样例                                         | 备注                                                |
-|---------------+----------------------------------------------+-----------------------------------------------------|
-| 基本数据类型  | boolean,byte,char,sort,int,float,long,double | long和dobbule占用两个插槽，其余数据类型占据一个插槽 |
-| refrence      | Object o = new Object();                     | o存储在栈上，内容为一个地址，指向堆                 |
-| retrunAddress | doSomeThing();                               | 此方法地址也存储在栈上，执行时寻址并执行            |
+| 数据类型       | 样例                                        | 备注                                                |
+|----------------+---------------------------------------------+-----------------------------------------------------|
+| 基本数据类型   | boolea,byte,char,sort,int,float,long,double | long和dobbule占用两个插槽，其余数据类型占据一个插槽 |
+| reference      | Object o = new Object();                    | o存储在栈上，内容为一个地址，指向堆                 |
+| return address | doSomeThing()                               |                                                     |
 
 槽的大小(32位或64位)取决与虚拟机的实现。
 
@@ -40,5 +44,11 @@
 
 *** 直接内存
 
-这部分内存不属于JVM，而是native(C)直接使用，
+这部分内存不属于JVM，而是Native(C)直接使用，
 
+** 类加载机制
+
+
+** 内存屏障
+
+** 你好
