--- a/uml/类图.org
+++ b/uml/类图.org
@@ -2,12 +2,16 @@
 
 * 类图
 
+**  泛化关系
+
 #+begin_src plantuml :file imgs/class-digram.png
-  !theme aws-orange
-  c1 <|-- c2
+  skinparam dpi 600
+  scale 400 * 400
+  Alice -> Bob : hello 
 #+end_src
 
 #+RESULTS:
 [[file:imgs/class-digram.png]]
+
 
 
